--- a/LobsterPackTest/mainunit.lfm
+++ b/LobsterPackTest/mainunit.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 346
+  Left = 252
   Height = 622
-  Top = 221
+  Top = 320
   Width = 875
   Caption = 'Form1'
   ClientHeight = 622
@@ -14,5 +14,6 @@ object Form1: TForm1
     Width = 744
     Stretched = False
     FillColor = 13865545
+    BrushRadius = 30
   end
 end
