--- a/LobsterPackTest/mainunit.lfm
+++ b/LobsterPackTest/mainunit.lfm
@@ -12,7 +12,7 @@ object Form1: TForm1
     Height = 536
     Top = 24
     Width = 752
-    ForeColor = clMaroon
+    ForeColor = clNavy
     BrushRadius = 30
     ZoomPercent = 75
     CanvasColor = clYellow
