--- a/LobsterDraw/frmmainunit.lfm
+++ b/LobsterDraw/frmmainunit.lfm
@@ -7,32 +7,34 @@ object FrmMain: TFrmMain
   ClientHeight = 519
   ClientWidth = 806
   Menu = MainMenu1
+  OnCreate = FormCreate
   LCLVersion = '1.0.14.0'
   object ScrollBox1: TScrollBox
     Left = 0
-    Height = 487
+    Height = 459
     Top = 32
     Width = 806
-    HorzScrollBar.Page = 802
+    HorzScrollBar.Page = 781
     HorzScrollBar.Tracking = True
-    VertScrollBar.Page = 483
+    VertScrollBar.Page = 455
     VertScrollBar.Tracking = True
     Align = alClient
-    ClientHeight = 483
-    ClientWidth = 802
+    ClientHeight = 455
+    ClientWidth = 781
     TabOrder = 0
     object LCDrawPad1: TLCDrawPad
       Left = 0
       Height = 480
       Top = 0
-      Width = 640
+      Width = 781
       ForeColor = clBlack
       LineSize = 20
       ZoomPercent = 100
       CanvasWidth = 640
       CanvasHeight = 480
       CanvasColor = clWhite
-      CanvasPosition = csUpperLeft
+      CanvasPosition = csMiddleCenter
+      Align = alClient
       AutoSize = True
     end
   end
@@ -94,6 +96,36 @@ object FrmMain: TFrmMain
       Top = 2
       Action = ActFlipVertical
     end
+    object ToolButton10: TToolButton
+      Left = 267
+      Top = 2
+      Width = 10
+      Caption = 'ToolButton10'
+      Style = tbsSeparator
+    end
+    object ToolButton11: TToolButton
+      Left = 277
+      Top = 2
+      Action = ActZoomOut
+    end
+    object ToolButton12: TToolButton
+      Left = 309
+      Top = 2
+      Action = ActZoomIn
+    end
+  end
+  object StatusBarMain: TStatusBar
+    Left = 0
+    Height = 28
+    Top = 491
+    Width = 806
+    Panels = <    
+      item
+        Alignment = taRightJustify
+        Text = 'Zoom       '
+        Width = 100
+      end>
+    SimplePanel = False
   end
   object MainMenu1: TMainMenu
     Images = ImageList1
@@ -472,6 +504,15 @@ object FrmMain: TFrmMain
         Visible = False
       end
     end
+    object MnuView: TMenuItem
+      Caption = 'View'
+      object MnuZoomOut: TMenuItem
+        Action = ActZoomOut
+      end
+      object MnuZoomIn: TMenuItem
+        Action = ActZoomIn
+      end
+    end
   end
   object ActionList1: TActionList
     Images = ImageList1
@@ -551,12 +592,26 @@ object FrmMain: TFrmMain
       ImageIndex = 8
       OnExecute = ActFlipVerticalExecute
     end
+    object ActZoomOut: TAction
+      Category = 'View'
+      Caption = 'Zoom Out'
+      Hint = 'Zoom Out'
+      ImageIndex = 9
+      OnExecute = ActZoomOutExecute
+    end
+    object ActZoomIn: TAction
+      Category = 'View'
+      Caption = 'Zoom In'
+      Hint = 'Zoom In'
+      ImageIndex = 10
+      OnExecute = ActZoomInExecute
+    end
   end
   object ImageList1: TImageList
     left = 34
     top = 179
     Bitmap = {
-      4C69090000001000000010000000FFFFFF000000001C00000033000000360000
+      4C690B0000001000000010000000FFFFFF000000001C00000033000000360000
       0036000000360000003600000036000000360000003600000036000000200000
       0002FFFFFF00FFFFFF00FFFFFF00FFFFFF0000000033F8F8F8F0FBFBFBFDFCFC
       FCFFFCFCFCFFFCFCFCFFFCFCFCFFFCFCFCFFFCFCFCFFF8F8F8FF949494910000
@@ -684,39 +739,39 @@ object FrmMain: TFrmMain
       4FFF4C4C4CFF4A4A4AFF474747FF454545FF25679DFF3274A8FF3D7CAFFF4784
       B5FF4E8ABAFF3E7EADFF0C578FEAFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF001D639B1619609839145D9562105A
-      92880D5890A4135C92FC0C578FED68C774FF68C774FF67C673FF66C572FF65C3
-      71FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF005CB666FF5BB4
-      64FF59B262FF58AF60FF56AD5EFF68C774FFA1D8A9FF9ED6A7FF65C371FFFFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF005BB464175FB4
-      67FF8DC894FF8EC995FF54AA5CFF67C673FF9DD6A5FFA1D8A9FF7ECA87FF63C0
-      6EAEFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF005AB3640059B162F176BD
-      7EFF8EC995FF8AC590FF52A85AFF66C472FF6BC575FF83CC8CFF92D19BFF7ECA
-      87FF63C06EAEFFFFFF00FFFFFF00FFFFFF005AB3641759B162F176BD7EFF8CC7
-      93FF6DB673FF52A759FF50A557FF65C370FF64C16F1763BF6DF183CC8CFF9BD3
-      A4FF7BC784FF60BC6BAEFFFFFF00FFFFFF0059B161EC75BD7DFF8CC793FF6DB6
-      73FF52A759AEFFFFFF004EA255FFFFFFFF00FFFFFF0061BD6C0063BF6DF180C9
-      89FF79C482FF5FB969B8FFFFFF00FFFFFF0057AE5FB36EB875FF6CB573FF52A7
-      59AEFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0061BD6C1760BB
-      6AEC5EB968B3FFFFFF00FFFFFF00FFFFFF00FFFFFF0053A95BB852A759AEFFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0057AE
-      5FAE55AC5DB8FFFFFF00FFFFFF00FFFFFF00FFFFFF004A9C50B348994EEC4797
-      4C17FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0057AE5FAE6CB6
-      73FF6AB471FF52A759B3FFFFFF00FFFFFF004A9B4FB85FA764FF62A867FF4595
-      4AF147974C00FFFFFF00FFFFFF005AB363FFFFFFFF0057AE5FAE6CB673FF84C0
-      8AFF6EB574FF50A457ECFFFFFF00FFFFFF0048994DAE5DA561FF75B379FF5FA4
-      63FF45954AF144934817439147FF58B061FF57AE5FFF6CB673FF84C08AFF6CB4
-      73FF50A457F14EA25517FFFFFF00FFFFFF00FFFFFF00459449AE5AA05EFF75B3
-      79FF5FA463FF47944CFF418F45FF56AD5FFF83C08AFF83BF89FF6CB473FF50A4
-      57F14EA25500FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00459449AE5AA0
-      5EFF6EAE73FF6CAD70FF408D44FF54AB5CFF83BF89FF7DBB83FF54A65BFF4EA1
-      5417FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF004290
-      46FF6DAD71FF6EAE73FF3F8C42FF53A85AFF51A658FF4FA356FF4EA154FF4C9F
-      52FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00429046FF418E
-      45FF408D43FF3F8B42FF3E8A41FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      92880D5890A4135C92FC0C578FEDDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E6B38CFFE6B38CFFE6B18AFFE2A8
+      80FFDE9B71FFD1926EFFA4A4A4FFA4A4A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDF
+      DF00A4A4A4FFA4A4A4FFDFDFDF00DFDFDF00E6B38CFFECC9AEFFEBBFA0FFE7B7
+      98FFE5AF91FFDD9873E8DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00E6B38CFFECC7ACFFE9BB9CFFE5B1
+      92FFE3AB8CFFDB9570E8DFDFDF00DFDFDF00DFDFDF00DFDFDF005F5F5FFFDFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E7B48DFEEBC5A7FFE7B597FFE2AC
+      8CFFE1A687FFDB946FE8DFDFDF005F5F5FFF5F5F5FFF5F5F5FFF5F5F5FFF5F5F
+      5FFFDFDFDF00A4A4A4FFDFDFDF00DFDFDF00E7B48DFFEBC5A7FFE7B597FFE2AC
+      8CFFE2A788FFDB946EFFDFDFDF00DFDFDF00DFDFDF00DFDFDF005F5F5FFFDFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E6B089FEE0A67CFFDA9970FFD68C
+      62FFD38459FFD48358E8DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00A4A4A4FFA4A4A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDF
+      DF00A4A4A4FFA4A4A4FFDFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF005F5F
+      5FFFDFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF005F5F
+      5FFFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF005F5F
+      5FFFDFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF005F5F5FFF5F5F
+      5FFF5F5F5FFFDFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF005F5F
+      5FFFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFA4A4A4FFDFDFDF00A4A4
+      A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+      DF00DFDFDF00DFDFDF00DFDFDF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF0068C7740365C37178FFFFFF00FFFFFF00FFFF
@@ -843,6 +898,70 @@ object FrmMain: TFrmMain
       56B1FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDEC102FADCBF97F9D9
+      BBE3F6D6B8FDF4D3B4FDF1CFAFE3EECBAB97EBC6A602FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDEC002FADBBEC0F9E2CDFFFAEC
+      DEFFF9EEE2FFF9EDE2FFF8E9DAFFF0D5BDFFE7C09FC0E3BC9A02FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FADBBD97F8E2CCFFFAEEE3FFF7E7
+      D6FFF6E2CEFFF6E1CBFFF6E3D0FFF9EADDFFECCFB5FFDFB69397FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00F7D7B9E3F9EBDEFFF7E7D6FFF6E1
+      CCFFF5E0CAFFF5DEC8FFF5DDC5FFF6E1CBFFF5E2D0FFDBB08CE3FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00F4D3B4FDF9EDE1FFF6E1CCFFF5DF
+      C9FFF5DEC7FFF4DCC4FF7E80F9FF6D6FFCFF6263FAFF5654F7FF4845F4FF3A35
+      F1FF2E26EEEEFFFFFF00FFFFFF00FFFFFF00F0CEAEFDF9ECDFFFF5DFC8FFF5DD
+      C6FFF4DCC3FFF4DAC1FF6D6FFCFF95A7F2FF91A1F0FF8D9BEDFF8793EBFF828C
+      E8FF231AECFFFFFFFF00FFFFFF00FFFFFF00ECC8A8E3F7E7D7FFF6E1CCFFF4DB
+      C2FFF4DAC0FFF3D8BDFF7371F3FF5654F7FF4845F4FF3A35F1FF2E26EEFF231A
+      ECFF1C11EAF7FFFFFF00FFFFFF00FFFFFF00E8C3A297EDD0B7FFF8E8D9FFF5DE
+      C8FFF3D8BDFFF3D6BBFFF4DBC2FFF7E4D2FFDFBB9DFF9D9492F74B84BC27FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BD9B02E1B896C0E8C9AEFFF5E1
+      CDFFF7E5D3FFF7E5D1FFF3DDC8FFDFBA9CFFC7A891FF86AED5FF417DB5EB3977
+      AF27FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00DDB28F02D9AE8A97D6A9
+      85E3D3A57FFDD0A07BFDCD9C76E4A2938ADE75A2CCFFABCBE8FF76A4CEFF3070
+      A8EB286BA327FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00447FB7063C79B1AD6497C5FF9DC1E4FF6699
+      C7FF1F659DEBFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003272AA062B6DA5AD558DBCFF89B5
+      DDFF185F97FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0022669E061B629AAD2267
+      9DFF115B9387FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00145D9503105A
+      921AFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDEC102FADCBF97F9D9
+      BBE3F6D6B8FDF4D3B4FDF1CFAFE3EECBAB97EBC6A602FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDEC002FADBBEC0F9E2CDFFFAEC
+      DEFFF9EEE2FFF9EDE2FFF8E9DAFFF0D5BDFFE7C09FC0E3BC9A02FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FADBBD97F8E2CCFFFAEEE3FFF7E7
+      D6FFF6E2CEFFF6E1CBFFF6E3D0FFF9EADDFF69BD70FF5BB565FF56AD5FF7FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00F7D7B9E3F9EBDEFFF7E7D6FFF6E1
+      CCFFF5E0CAFFF5DEC8FFF5DDC5FFF6E1CBFF59B363FF82CAA7FF4EA256FFFFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00F4D3B4FDF9EDE1FFF6E1CCFFF5DF
+      C9FFF5DEC7FFF4DCC4FF69BB6EFF58B061FF64B578FF78C39AFF58A769FF3F8E
+      46FF398640EEFFFFFF00FFFFFF00FFFFFF00F0CEAEFDF9ECDFFFF5DFC8FFF5DD
+      C6FFF4DCC3FFF4DAC1FF56AD5FFF79C49CFF73BF94FF6CBA8CFF65B684FF5EB0
+      7BFF317B37FFFFFFFF00FFFFFF00FFFFFF00ECC8A8E3F7E7D7FFF6E1CCFFF4DB
+      C2FFF4DAC0FFF3D8BDFF61A862FF489A50FF51A062FF60B27EFF449353FF2F78
+      35FF2A702FF7FFFFFF00FFFFFF00FFFFFF00E8C3A297EDD0B7FFF8E8D9FFF5DE
+      C8FFF3D8BDFFF3D6BBFFF4DBC2FFF7E4D2FF398640FF54A970FF2E7533FFFFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BD9B02E1B896C0E8C9AEFFF5E1
+      CDFFF7E5D3FFF7E5D1FFF3DDC8FFDFBA9CFF3D7F3EFF2C7331FF2A6E3AFD3977
+      AF27FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00DDB28F02D9AE8A97D6A9
+      85E3D3A57FFDD0A07BFDCD9C76E4A2938ADE75A2CCFFABCBE8FF76A4CEFF3070
+      A8EB286BA327FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00447FB7063C79B1AD6497C5FF9DC1E4FF6699
+      C7FF1F659DEBFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003272AA062B6DA5AD558DBCFF89B5
+      DDFF185F97FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0022669E061B629AAD2267
+      9DFF115B9387FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00145D9503105A
+      921AFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00
     }
