Experimental support of Zoom key shortcut

--- a/LobsterDraw/frmmainunit.lfm
+++ b/LobsterDraw/frmmainunit.lfm
@@ -4,29 +4,29 @@ object FrmMain: TFrmMain
   Top = 223
   Width = 806
   Caption = 'Lobster Draw'
-  ClientHeight = 519
+  ClientHeight = 524
   ClientWidth = 806
   Menu = MainMenu1
   OnCreate = FormCreate
   LCLVersion = '1.0.14.0'
   object ScrollBox1: TScrollBox
     Left = 0
-    Height = 459
+    Height = 469
     Top = 32
     Width = 806
-    HorzScrollBar.Page = 781
+    HorzScrollBar.Page = 785
     HorzScrollBar.Tracking = True
-    VertScrollBar.Page = 455
+    VertScrollBar.Page = 465
     VertScrollBar.Tracking = True
     Align = alClient
-    ClientHeight = 455
-    ClientWidth = 781
+    ClientHeight = 465
+    ClientWidth = 785
     TabOrder = 0
     object LCDrawPad1: TLCDrawPad
       Left = 0
       Height = 480
       Top = 0
-      Width = 781
+      Width = 785
       ForeColor = clBlack
       LineSize = 20
       ZoomPercent = 100
@@ -116,8 +116,8 @@ object FrmMain: TFrmMain
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 28
-    Top = 491
+    Height = 23
+    Top = 501
     Width = 806
     Panels = <    
       item
@@ -508,9 +508,81 @@ object FrmMain: TFrmMain
       Caption = 'View'
       object MnuZoomOut: TMenuItem
         Action = ActZoomOut
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00145D9503105A921AFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF0022669E061B629AAD22679DFF115B9387FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003272
+          AA062B6DA5AD558DBCFF89B5DDFF185F97FFFFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00447FB7063C79
+          B1AD6497C5FF9DC1E4FF6699C7FF1F659DEBFFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00DDB28F02D9AE8A97D6A985E3D3A57FFDD0A07BFDCD9C76E4A2938ADE75A2
+          CCFFABCBE8FF76A4CEFF3070A8EB286BA327FFFFFF00FFFFFF00FFFFFF00E4BD
+          9B02E1B896C0E8C9AEFFF5E1CDFFF7E5D3FFF7E5D1FFF3DDC8FFDFBA9CFFC7A8
+          91FF86AED5FF417DB5EB3977AF27FFFFFF00FFFFFF00FFFFFF00FFFFFF00E8C3
+          A297EDD0B7FFF8E8D9FFF5DEC8FFF3D8BDFFF3D6BBFFF4DBC2FFF7E4D2FFDFBB
+          9DFF9D9492F74B84BC27FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00ECC8
+          A8E3F7E7D7FFF6E1CCFFF4DBC2FFF4DAC0FFF3D8BDFF7371F3FF5654F7FF4845
+          F4FF3A35F1FF2E26EEFF231AECFF1C11EAF7FFFFFF00FFFFFF00FFFFFF00F0CE
+          AEFDF9ECDFFFF5DFC8FFF5DDC6FFF4DCC3FFF4DAC1FF6D6FFCFF95A7F2FF91A1
+          F0FF8D9BEDFF8793EBFF828CE8FF231AECFFFFFFFF00FFFFFF00FFFFFF00F4D3
+          B4FDF9EDE1FFF6E1CCFFF5DFC9FFF5DEC7FFF4DCC4FF7E80F9FF6D6FFCFF6263
+          FAFF5654F7FF4845F4FF3A35F1FF2E26EEEEFFFFFF00FFFFFF00FFFFFF00F7D7
+          B9E3F9EBDEFFF7E7D6FFF6E1CCFFF5E0CAFFF5DEC8FFF5DDC5FFF6E1CBFFF5E2
+          D0FFDBB08CE3FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FADB
+          BD97F8E2CCFFFAEEE3FFF7E7D6FFF6E2CEFFF6E1CBFFF6E3D0FFF9EADDFFECCF
+          B5FFDFB69397FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDE
+          C002FADBBEC0F9E2CDFFFAECDEFFF9EEE2FFF9EDE2FFF8E9DAFFF0D5BDFFE7C0
+          9FC0E3BC9A02FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FCDEC102FADCBF97F9D9BBE3F6D6B8FDF4D3B4FDF1CFAFE3EECBAB97EBC6
+          A602FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+        }
       end
       object MnuZoomIn: TMenuItem
         Action = ActZoomIn
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00145D9503105A921AFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF0022669E061B629AAD22679DFF115B9387FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003272
+          AA062B6DA5AD558DBCFF89B5DDFF185F97FFFFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00447FB7063C79
+          B1AD6497C5FF9DC1E4FF6699C7FF1F659DEBFFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00DDB28F02D9AE8A97D6A985E3D3A57FFDD0A07BFDCD9C76E4A2938ADE75A2
+          CCFFABCBE8FF76A4CEFF3070A8EB286BA327FFFFFF00FFFFFF00FFFFFF00E4BD
+          9B02E1B896C0E8C9AEFFF5E1CDFFF7E5D3FFF7E5D1FFF3DDC8FFDFBA9CFF3D7F
+          3EFF2C7331FF2A6E3AFD3977AF27FFFFFF00FFFFFF00FFFFFF00FFFFFF00E8C3
+          A297EDD0B7FFF8E8D9FFF5DEC8FFF3D8BDFFF3D6BBFFF4DBC2FFF7E4D2FF3986
+          40FF54A970FF2E7533FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00ECC8
+          A8E3F7E7D7FFF6E1CCFFF4DBC2FFF4DAC0FFF3D8BDFF61A862FF489A50FF51A0
+          62FF60B27EFF449353FF2F7835FF2A702FF7FFFFFF00FFFFFF00FFFFFF00F0CE
+          AEFDF9ECDFFFF5DFC8FFF5DDC6FFF4DCC3FFF4DAC1FF56AD5FFF79C49CFF73BF
+          94FF6CBA8CFF65B684FF5EB07BFF317B37FFFFFFFF00FFFFFF00FFFFFF00F4D3
+          B4FDF9EDE1FFF6E1CCFFF5DFC9FFF5DEC7FFF4DCC4FF69BB6EFF58B061FF64B5
+          78FF78C39AFF58A769FF3F8E46FF398640EEFFFFFF00FFFFFF00FFFFFF00F7D7
+          B9E3F9EBDEFFF7E7D6FFF6E1CCFFF5E0CAFFF5DEC8FFF5DDC5FFF6E1CBFF59B3
+          63FF82CAA7FF4EA256FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FADB
+          BD97F8E2CCFFFAEEE3FFF7E7D6FFF6E2CEFFF6E1CBFFF6E3D0FFF9EADDFF69BD
+          70FF5BB565FF56AD5FF7FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FCDE
+          C002FADBBEC0F9E2CDFFFAECDEFFF9EEE2FFF9EDE2FFF8E9DAFFF0D5BDFFE7C0
+          9FC0E3BC9A02FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FCDEC102FADCBF97F9D9BBE3F6D6B8FDF4D3B4FDF1CFAFE3EECBAB97EBC6
+          A602FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+        }
       end
     end
   end
